# programming_exercises

./: .gitignore  CMakeLists.txt  Makefile  README.md  myfind  myfind.c  myldap.c  mypw.c  mypw.h  pom.xml  todo.txt
Abschlusstest/: main.c
UE01_Gesicht/: main.c
UE03_Tax/: main.c
UE04_Oktal/: main.c
UE05_TimeConversion/: main.c
UE06_MinMaxSumOf4Of5/: main.c
UE08_OneMonthCalendar/: main.c
UE09_LoopStatistics/: main.c  main.c.old
UE11_TimeClaculations/: main.c
UE12_Praemie/: main.c
UE13_WordLengthStatistics/: main.c
UE15_CountWords/: main.c
UE16_ArrayWalker/: main.c
Zwischentest_01/: main.c
Zwischentest_02/: main.c
Zwischentest_03/: main.c
algo/02_BinaryTree/: AlgosUE2_Protokoll.odt  CMakeLists.txt  README.md  main.cpp  sub.txt
backend/: ServiceHandler.php
backend/businessLogic/: AppointmentHandler.php
backend/controller/: AppointmentController.php
backend/db/: DataHandler.php  appointmentfinder.sql  createdb.sql
backend/models/: Appointment.php  Comment.php  Date.php  (+1 more)
frontend/: index.html
oop/02_Oasencrawler_OOP/: CMakeLists.txt  main.cpp  main.h
oop/02_Oasencrawler_OOP/headers/: Bullet.h  Enemy.h  Field.h  InputHandler.h  Player.h  Test.h  TestHandler.h  World.h  utils.h
oop/02_Oasencrawler_OOP/src/: Bullet.cpp  Enemy.cpp  Field.cpp  InputHandler.cpp  Player.cpp  Test.cpp  TestHandler.cpp  World.cpp
oop/03_FightClub/: CMakeLists.txt  main.cpp
oop/03_FightClub/headers/: Ability.h  Fight.h  Fighter.h  GameHandler.h  Human.h  OrcFighter.h
oop/03_FightClub/src/: Ability.cpp  Fight.cpp  Fighter.cpp  GameHandler.cpp  Human.cpp  OrcFighter.cpp
oop/04_DeepMiner/: CMakeLists.txt
oop/04_DeepMiner/google_tests/: CMakeLists.txt  DeepMinerTest.cpp
oop/04_DeepMiner/google_tests/bot_tests/: bot_tests.cpp
oop/04_DeepMiner/headers/: Bot.h  GameHandler.h  SearchBot.h
oop/04_DeepMiner/src/: Block.cpp  GameHandler.cpp
oop/06_DeepMiner/deep_miner_tests/: CMakeLists.txt  bot_tests.cpp
oop/07_Flottenkampf/: CMakeLists.txt  main.cpp
oop/07_Flottenkampf/headers/: Cruiser.h  Destroyer.h  GameHandler.h  Hunter.h  InputHandler.h  Player.h  Ship.h  ShipIsDeadException.h
oop/07_Flottenkampf/src/: Cruiser.cpp  Destroyer.cpp  GameHandler.cpp  Hunter.cpp  InputHandler.cpp  Player.cpp  Ship.cpp
prozd/: README.md
src/: Makefile  README.md  client.c  db_cleanup.sql  fragen  mtcg.sql  server.c  tests.sh
untitled/: main.c
(+124 files in other folders)
